trying to fix padding because margins were running into each other, div color was not showing up

--- a/src/styles/components/_resume.scss
+++ b/src/styles/components/_resume.scss
@@ -13,7 +13,6 @@
 	@include media($mobile) {
 		@include span-columns(10);
 		@include shift(1);
-		border: 1px solid blue;
 		padding-top: 70px;
 		margin-bottom: 70px;
 
